# chil

./: .dir-locals.el  Makefile.am  README.org  TODO.org  chil.asd  chilog.asd  configure.ac
.guix/modules/: chil-package.scm
chilog/source/: chilog.lisp  interpreter.lisp
chilog/tests/: chilog.lisp  interpreter.lisp  path-reachability.lisp  utils.lisp
doc/: chil.texi
emacs/: chil.el
examples/: ideal.chil
source/: chil.lisp  ir.lisp  module.lisp  utils.lisp
source/backends/: base.lisp  system-verilog.lisp  verilog.lisp  vhdl.lisp
source/types/: data.lisp  uint.lisp
tests/: base.lisp  example.lisp  sim.lisp  test-utils.lisp  utils.lisp  write-verilog.lisp  write-vhdl.lisp
